.CSS file has text align and font adjustments for the two paragraphs in the body, the html file was corrected to put the text in the body rather than the header.

--- a/homepage.css
+++ b/homepage.css
@@ -1,3 +1,17 @@
+
 body {
   background-color: #5FBECD;
+  text-align: center;
+ }
+
+p1 {
+      font-family: Georgia,serif;
+      font-style:bold;
+      color: white;
+      font-size: 70px;
+      font-weight:bold;
+} 
+
+p2 {
+  
 }
